# bench

./: .gitignore  README.md  lint.sh  pyproject.toml
.github/workflows/: deploy.yml
docs/source/: conf.py  index.rst  introduction.rst  methods.rst  metrics.rst  overview.rst  results.rst  tasks.rst
docs/source/examples/: root_finding.rst
docs/source/modules/: bench.metrics.rst  bench.rst  bench.serialization.rst  bench.templates.rst
docs/source/static/: custom.css
examples/: main.py  root_finding.py
img/: banner.xcf  favicon.xcf
src/bench/: __init__.py  _bench.py  _cache.py  _components.py  _engine.py  _logging.py  _process.py  _utils.py  cache.py  engine.py  logging.py  main.py  metrics.py  process.py  serialization.py  templates.py  utils.py
src/bench/dashboard/: __init__.py  _ansi.py  _dashboard.py  _page_new_task.py  _page_task.py  _sidebar.py  ansi.py  components.py  icons.py  main.py  utils.py
src/bench/test/: main.py  test_bench.py  test_engine.py  test_serialization.py
