[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bench"
version = "0.0.1"
description = "Bench is a Python framework for benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]
maintainers = [{ name = "Jesse Vogel", email = "jesse.t.vogel@gmail.com" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
]
dependencies = ["slash @ git+https://github.com/jessetvogel/slash.git@main"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]

[project.scripts]
bench-dashboard = "bench.main:main_dashboard"
bench-run = "bench.main:main_run"

[tool.setuptools]
package-dir = { "" = "src" }
package-data = { bench = ["assets/**/*"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120
